--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -32,7 +32,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edit_name"
-                android:text="@{String.valueOf(viewModel.shopItem.name)}"
+                android:text="@{viewModel.shopItem.name}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/name"
