Dependency injection added, modules added

--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -5,6 +5,6 @@
     android:id="@+id/shop_item_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ShopItemActivity"
+    tools:context=".presentation.screens.ShopItemActivity"
     tools:layout="@layout/fragment_shop_item"
     />
