--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.octaneocatane.shoppinglist.presentation.ShopItemViewModel" />
+            type="com.octaneocatane.shoppinglist.presentation.viewmodel.ShopItemViewModel" />
         
     </data>
     
@@ -12,7 +12,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ShopItemFragment">
+        tools:context=".presentation.screens.ShopItemFragment">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_name"
